# smarty_wallet

./: .gitignore  package-lock.json  package.json  tsconfig.json
public/: index.html  manifest.json  popup.js
public/js/: background.js  smartyProvider.ts
src/: App.tsx  index.css
src/components/backup_phrase/: backup_phrase.css  index.tsx
src/components/create_wallet/: create_wallet.css  index.tsx
src/components/home/: home.css  index.tsx
src/components/secret_phrase/: index.tsx  secret_phrase.css
src/components/set_password/: index.tsx  set_password.css
wasm_mod/: Cargo.toml
wasm_mod/src/: env.rs  lib.rs  progress.ts  utils.rs  wallet.rs
